--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>JavaScriprt</title>
 </head>
 <body>
-	<h1>Witaj na mojej stronie</h1>
+	<h1>My first JavaScript</h1>
+	<p>Click the button to display an alert box.</p>
+	<button onclick="myFunction()">Try it</button>
+<script type="text/javascript"></script>
+<script src="script.js"></script>
 </body>
 </html>
