add triangle area

--- a/próby/proba1.html
+++ b/próby/proba1.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 	<h1>Witaj na mojej stronie</h1>
-	<button onclick="myFunction()">Try it</button>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="nowe1.js"></script>
 </body>
 </html>
