improve conditional instruction

--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>JavaScriprt</title>
+	<title>Triangle</title>
 </head>
 <body>
-	<h1>Witaj na mojej stronie</h1>
+	<script type="text/javascript" src="javascript/script.js"></script>
 </body>
 </html>
