--- a/html/index.html
+++ b/html/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 	<h1>Witaj na mojej stronie</h1>
+<script type="text/javascript" src="../javascript/script.js"></script>	
 </body>
 </html>
