--- a/html/index.html
+++ b/html/index.html
@@ -2,8 +2,14 @@
 <html>
 <head>
 	<title>JavaScriprt</title>
+	<meta charset="utf-8">
 </head>
 <body>
 	<h1>Witaj na mojej stronie</h1>
+	<button class="button">Jem placki</button>
+	<button class="button">Jem kurczaka</button>
+	<button class="button">Jem zupę</button>
+	<button class="button">Jem rybę</button>
+<script type="text/javascript" src="../javascript/script.js"></script>
 </body>
 </html>
