add item after click DOM

--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,10 @@
 	<title>JavaScriprt</title>
 </head>
 <body>
-	<h1>Witaj na mojej stronie</h1>
+	<ul id="list">
+  		<li>item 0</li>
+	</ul>
+	<button id="addElem">Dodaj</button>
+<script type="text/javascript" src="../javascript/script.js"></script>
 </body>
 </html>
