add value zero and bonus

--- a/html/index.html
+++ b/html/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<title>JavaScriprt</title>
+	<meta charset="utf-8">
 </head>
 <body>
 	<h1>Witaj na mojej stronie</h1>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="../javascript/script.js"></script>
 </body>
 </html>
